--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,31 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="sugar">
     <ion-title>
       Ionic Blank
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="container" padding>
+  <ion-list no-lines>
+    <ion-list-header>
+      curriculum codetribe
+    </ion-list-header>
+    <button ion-item *ngFor="let course of arrCourses" (click)="getData(course)">
+
+  <ion-icon name="{{course.icon}}" item-left ></ion-icon>  
+  <h2>{{course.title}}</h2>
+  <h3>Duration:{{course.weeks}}weeks</h3> 
+  <div *ngFor="let lesson of course.lessons">
+
+    <h2>{{lesson.title}}</h2>
+    <h3>{{lesson.number}}</h3> 
+    <h4>description:{{lesson.description}}</h4> 
+  </div>
+
+</button>
+
+  
+  </ion-list>
+  
 </ion-content>
